<resources>
    <string name="app_name">AccoutProject</string>

    <!-- bottom_menu -->
    <string name="month_menu">월간</string>
    <string name="week_menu">주간</string>
    <string name="day_menu">일간</string>
    <string name="setting_menu">설정</string>

    <!-- fragment_month -->
    <string name="no_item_text">데이터가 없습니다.</string>
    <string name="income_text">수입</string>
    <string name="expense_text">지출</string>

    <!-- add activity -->
    <string name="krw_label"></string>
    <string name="deposit_text">입금</string>

    <!-- detail activity -->
    <string name="history_label">내역</string>

    <!-- receipt activity -->
    <string name="delete_menu">삭제</string>
    <string name="price">금액</string>
    <string name="content">내역</string>
    <string name="won">원</string>

    <!-- layout week -->
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>

</resources>