<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/label_sunday"
        style="@style/week_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sunday"
        app:layout_constraintEnd_toStartOf="@id/label_monday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_monday"
        style="@style/week_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/monday"
        app:layout_constraintEnd_toStartOf="@id/label_tuesday"
        app:layout_constraintStart_toEndOf="@id/label_sunday"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_tuesday"
        style="@style/week_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"
        app:layout_constraintEnd_toStartOf="@id/label_wednesday"
        app:layout_constraintStart_toEndOf="@id/label_monday"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_wednesday"
        style="@style/week_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"
        app:layout_constraintEnd_toStartOf="@id/label_thursday"
        app:layout_constraintStart_toEndOf="@id/label_tuesday"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_thursday"
        style="@style/week_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        app:layout_constraintEnd_toStartOf="@id/label_friday"
        app:layout_constraintStart_toEndOf="@id/label_wednesday"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_friday"
        style="@style/week_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/friday"
        app:layout_constraintEnd_toStartOf="@id/label_saturday"
        app:layout_constraintStart_toEndOf="@id/label_thursday"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_saturday"
        style="@style/week_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/saturday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_friday"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>